[package]
name = "nhl-235"
version = "1.4.1"
authors = ["Juha-Matti Santala <juhamattisantala@gmail.com>"]
edition = "2018"
license = "MIT"
description = "NHL latest scores CLI tool with Finnish YLE teletext aesthetics"
readme = "README.md"
homepage = "https://hamatti.github.io/nhl-235/"
repository = "https://github.com/Hamatti/nhl-235"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colour = "0.5.0"
itertools = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3.13"
atty = "0.2"
dirs = "4.0"
